# LLM_Cost_Autopilot

./: .env.example  .gitignore  Dockerfile  LLM_Cost_Autopilot_Build_Plan.md  README.md  api.py  budget.py  claude.py  conftest.py  dashboard.py  dashboard_data.py  docker-compose.yml  github_models.py  interface.py  load_test.py  logging_config.py  models.py  ollama.py  pyproject.toml  registry.py  router.py  routing.yaml  setup.py  test_smoke.py  verification_queue.py  verifier.py
data/: routing_dataset.jsonl
docs/: engineering_journal.md  feature_roadmap.md
pages/: 1_Playground.py
prompts/: router_classify.txt
scripts/: check_models.py
src/autopilot/: api.py  budget.py  claude.py  dashboard.py  dashboard_data.py  github_models.py  hardware_profile.py  interface.py  logging_config.py  models.py  models_by_hardware.yaml  ollama.py  registry.py  router.py  router_feedback.py  routing.yaml  verification_queue.py  verifier.py
src/autopilot/prompts/: router_classify.txt
tests/: test_router_accuracy.py  test_routing.py  test_smoke.py  test_verifier.py
