[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-cost-autopilot"
version = "0.1.0"
description = "Budget-aware LLM router: local → Copilot → Claude"
requires-python = ">=3.10"
dependencies = [
    # Core
    "httpx>=0.27",           # async HTTP for Ollama + GitHub Models
    "pyyaml>=6.0",           # routing.yaml + models_by_hardware.yaml
    "pydantic>=2.0",         # typed Response / ModelConfig validation
    "psutil>=5.9",           # RAM detection in hardware profiler
    # Claude backend
    "anthropic>=0.34",       # Claude API / Agent SDK
    # FastAPI (Phase 5 — install now so the scaffold is ready)
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    # Dashboard (Phase 4)
    "streamlit>=1.35",
    # Utilities
    "python-dotenv>=1.0",
    "rich>=13.0",            # pretty console output in setup script
    "aiosqlite>=0.20",       # non-blocking SQLite for BudgetState hot path
    "tenacity>=8.0",         # retry logic for Ollama router calls
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx",                 # also used in tests
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/autopilot"]
